--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-coverage==7.4.4
+bcrypt==4.1.2
 Django==2.2.28
-django-registration-redux==2.2
-Pillow==5.4.1
-pytz==2024.1
+django-registration-redux==2.13
+ipycanvas==0.13.1
+pillow==10.2.0
+pytz==2023.3.post1
 sqlparse==0.4.4
